--- a/demo_containerized_model.ipynb
+++ b/demo_containerized_model.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook is to showcase/test the containerized model.\n",
     "\n",
-    "We import the LeakyBucket model:"
+    "We import the Hype model:"
    ]
   },
   {
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "from ewatercycle_leakybucket.model import LeakyBucket"
+    "from ewatercycle_hype.model import Hype"
    ]
   },
   {
@@ -82,13 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can start the model. The `LeakyBucket` class uses a container hosted on the Github container registry.\n",
+    "Now we can start the model. The `Hype` class uses a container hosted on the Github container registry.\n",
     "\n",
     "Alternatively, you can start the model using a local container. For this you would modify the command as such:\n",
     "\n",
     "```py\n",
     "from ewatercycle.container import ContainerImage\n",
-    "LeakyBucket(forcing=forcing, bmi_image=ContainerImage(\"local_image:latest\"))\n",
+    "Hype(forcing=forcing, bmi_image=ContainerImage(\"local_image:latest\"))\n",
     "```"
    ]
   },
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LeakyBucket(forcing=forcing) \n",
+    "model = Hype(forcing=forcing) \n",
     "cfg_file, _ = model.setup(leakiness=0.10)"
    ]
   },
@@ -119,7 +119,7 @@
     {
      "data": {
       "text/plain": [
-       "'leakybucket'"
+       "'hype'"
       ]
      },
      "execution_count": 5,
